--- a/app/src/main/res/layout/activity_authentication.xml
+++ b/app/src/main/res/layout/activity_authentication.xml
@@ -22,4 +22,10 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Password" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="AUTHENTICATE" />
 </LinearLayout>
