--- a/app/src/main/res/layout/activity_authentication.xml
+++ b/app/src/main/res/layout/activity_authentication.xml
@@ -24,7 +24,7 @@
         android:text="Password" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_auth"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="AUTHENTICATE" />
