--- a/app/src/main/res/layout/activity_authentication.xml
+++ b/app/src/main/res/layout/activity_authentication.xml
@@ -34,6 +34,11 @@
         android:layout_height="wrap_content"
         android:text="@string/authenticate" />
 
+    <TextView
+        android:id="@+id/result"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:text="" />
 
 
 </LinearLayout>
