--- a/app/src/main/res/layout/activity_flickrapp.xml
+++ b/app/src/main/res/layout/activity_flickrapp.xml
@@ -7,5 +7,9 @@
     android:orientation="vertical"
     tools:context=".Flickrapp">
 
-
+    <Button
+        android:id="@+id/getImage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button" />
 </LinearLayout>
