--- a/app/src/main/res/layout/activity_flickrapp.xml
+++ b/app/src/main/res/layout/activity_flickrapp.xml
@@ -7,6 +7,12 @@
     android:orientation="vertical"
     tools:context=".Flickrapp">
 
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:srcCompat="@tools:sample/avatars" />
+
     <Button
         android:id="@+id/getImage"
         android:layout_width="match_parent"
