--- a/app/src/main/res/layout/activity_flickrapp.xml
+++ b/app/src/main/res/layout/activity_flickrapp.xml
@@ -11,7 +11,7 @@
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@tools:sample/avatars[1]" />
 
     <Button
         android:id="@+id/getImage"
