--- a/app/src/main/res/layout/activity_flickrapp.xml
+++ b/app/src/main/res/layout/activity_flickrapp.xml
@@ -18,4 +18,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:srcCompat="@tools:sample/avatars[1]" />
+
+    <Button
+        android:id="@+id/list_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClickList"
+        android:text="@string/display_list" />
 </LinearLayout>
