--- a/app/src/main/res/layout/bitmaplayout.xml
+++ b/app/src/main/res/layout/bitmaplayout.xml
@@ -6,8 +6,8 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/image"
-        android:layout_width="match_parent"
+        android:id="@+id/image_bml"
+        android:layout_width="335dp"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_launcher_foreground" />
+        app:srcCompat="@drawable/ic_launcher_background" />
 </LinearLayout>
